--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,38 +1,38 @@
-<nav class="navbar navbar-light bg-dark">
+<nav class="navbar navbar-light bg-primary">
 <div class="container-fluid">
             <h3 style="color:white">E_Com</h3>
             <form class="d-flex" *ngIf="logfun=='default'">
                 <input type="search" class="formcontrol" placeholder="Search here" aria-label="Search">
-                <button type="submit" class="btn btn-danger mx-2 ">Search</button>
+                <button type="submit" class="btn btn-success mx-2 ">Search</button>
             </form>
             <div class="menu d-flex nav justify-content-end">
                 <div [ngSwitch]="logfun" class="collapse navbar-collapse d-flex " id="navbarTogglerDemo01">
                 <ul *ngSwitchCase="'default'" class="nav justify-content-end" style="color: white; margin-right:50px ;">
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" [routerLink]="''">Home</a>
+                        <a class="nav-link active " style="color:white" aria-current="page" [routerLink]="''">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" [routerLink]="'seller-auth'">Seller</a>
+                        <a class="nav-link active " style="color:white" aria-current="page" [routerLink]="'seller-auth'">Seller</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" [routerLink]="'login'">Login</a>
+                        <a class="nav-link active " style="color:white" aria-current="page" [routerLink]="'login'">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" [routerLink]="'cart'">cart</a>
+                        <a class="nav-link active " style="color:white" aria-current="page" [routerLink]="'cart'">cart</a>
                     </li>
                 </ul>
                 <ul *ngSwitchCase="'seller'" class="nav justify-content-end" style="color: white; margin-right:50px ;">
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" [routerLink]="''">{{sellername}}</a>
+                        <a class="nav-link active " aria-current="page" style="color: white;" [routerLink]="''">{{sellername}}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" [routerLink]="'addproduct'">Add product</a>
+                        <a class="nav-link active " aria-current="page" style="color: white;" [routerLink]="'addproduct'">Add product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" [routerLink]="'seller-home'">List Product</a>
+                        <a class="nav-link active " aria-current="page" style="color: white;" [routerLink]="'seller-home'">List Product</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active " aria-current="page" (click)="logout()" [routerLink]="''">Logout</a>
+                        <a class="nav-link active " aria-current="page" style="color: white;" (click)="logout()" [routerLink]="''">Logout</a>
                     </li>
                 </ul>
 
