--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,37 @@
-<p>home works!</p>
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-md-7">
+            
+                    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img style="height: 500px;" src="https://m.media-amazon.com/images/I/61Tdqa+95VL._SL1500_.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img style="height: 500px;" src="https://cdn.pixabay.com/photo/2017/03/19/01/43/living-room-2155376__340.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item" id="img3">
+                            <img style="height: 500px;" src="https://cdn.pixabay.com/photo/2019/05/15/10/16/air-conditioner-4204637__340.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item"  id="img3">
+                            <img style="height: 500px ;" src="../../assets/61KeIxmldLL._SL1500_.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item"  id="img3">
+                            <img style="height: 500px ;" src="https://m.media-amazon.com/images/I/616XBSBkcrL._SX679_.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </div>
+            </div>
+        </div>
+    
+
+
